fixing pdf spacing issues

--- a/public/css/paper.css
+++ b/public/css/paper.css
@@ -1,5 +1,6 @@
 .colorBody{
 	background-color: #C070A0;
+	padding-bottom: 50px;
 }
 
 .grid{
@@ -10,7 +11,6 @@
 	height: auto;
 	/* background-color: #e1e1e1; /*color for searchbox area */
 	background-color: #eeeeee; /* color for results area */
-	padding-bottom: 50px !important;
 }
 
 .paperOptions{
